--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-zinc-50">
     <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
