--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>Vite + React + TS</title>
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body class="bg-zinc-50">
     <div id="root" class="h-full"></div>
