--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <title>Vite + React + TS</title>
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body class="bg-zinc-50">
     <div id="root" class="h-full"></div>
