--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link
       rel="stylesheet"
       as="style"
@@ -15,7 +15,7 @@
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <title>Vite + React + TS</title>
+    <title>Memoria</title>
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body class="bg-zinc-50">
